# my_codex

./: AGENTS.md  README.md  migrate_codex_hooks.sh  remote.sh  setup.sh
.codex/: auth.json  config.toml
.codex/skills/change-gate/: SKILL.md
.codex/skills/code-review-with-logs/: SKILL.md
.codex/skills/code-review-with-logs/agents/: openai.yaml
.codex/skills/code-review-with-logs/references/: implementation-guidance.md  reliable-check.md  (+2 more)
.codex/skills/error-roadmap/: SKILL.md
.codex/skills/experiment-handbook/: SKILL.md
.codex/skills/harness-bench/: SKILL.md
.codex/skills/high-signal-review/: SKILL.md
.codex/skills/lark-doc/: SKILL.md
.codex/skills/lark-wiki/: SKILL.md
.codex/skills/linear-cli/: SKILL.md
.codex/skills/modular-code/: SKILL.md
.codex/skills/paper-writing/: SKILL.md
.codex/skills/planning-with-files/: SKILL.md
.codex/skills/qizhi-rollout-train-deploy-experiment/: SKILL.md  env.sh
.codex/skills/qz-browser/: SKILL.md
.codex/skills/qz-guide/: SKILL.md  config.md  deployments.md  jobs.md  offline-gpu.md.example
.codex/skills/refactor-slice/: SKILL.md
.codex/skills/refinement/: SKILL.md
.codex/skills/research-lit/: SKILL.md
.codex/skills/rollout-monitoring-review/: SKILL.md
.codex/skills/software-architecture/: SKILL.md
.codex/skills/system-contract/: SKILL.md
.codex/skills/unit-test/: SKILL.md
.codex/skills/uv-package-manager/: SKILL.md
.codex/skills/uv-package-manager/qz-customize/references/qzx_scaffold/: pyproject.toml
.codex/skills/uv-package-manager/qz-customize/references/qzx_scaffold/src/qzx/: cli.py
(+120 files in other folders)
